--- a/css/17/17.2 pseudo_box_color/styeles.css
+++ b/css/17/17.2 pseudo_box_color/styeles.css
@@ -3,16 +3,12 @@
   height: 70px;
   background-color: blueviolet;
   position: relative;
-  z-index: 0;
 }
-.box1 {
+
+.box:after {
+  content: " ";
   position: absolute;
   width: 50%;
   height: 100%;
   background-color: red;
-}
-
-box:before {
-  content: box1;
-  z-index: -1;
 }
