--- a/motdi's task/trial.html/trial.css
+++ b/motdi's task/trial.html/trial.css
@@ -52,6 +52,6 @@ h3{
     display: flex;
     justify-content: center;
     justify-content: space-between;
-    flex-wrap:wrap;  
+    /* flex-wrap:wrap;   */
   }
 }
