--- a/css/17/17.2 pseudo_box_color/styeles.css
+++ b/css/17/17.2 pseudo_box_color/styeles.css
@@ -6,9 +6,12 @@
 }
 
 .box:after {
-  content: " ";
+  content: "";
   position: absolute;
-  width: 50%;
+  left: 100%;
+  /* display: block; */
+  width: 100%;
+  /* /* width: 50%; */
   height: 100%;
   background-color: red;
 }
