--- a/Tesla progect/styles.css
+++ b/Tesla progect/styles.css
@@ -3,9 +3,7 @@
     margin: 0;
     box-sizing: border-box;
     --primary-color:white;
-    /* max-width: 1200xp; */
     scroll-behavior: smooth;
-    max-width: 1270px;
   }
 
   @font-face {
@@ -20,16 +18,9 @@
     font-family: "gothamSSm";
     width: 100%;
     height: 100vh;
-
   }
-  /* img{
-    position: absolute;
-  
-    top: 20px;
-    z-index: -1;
-  } */
 
-
+/* page 1 */
   .page-1{
  
      background: url(./model-3-main-hero-a-desktop.jpg) no-repeat center center/cover;
@@ -42,11 +33,11 @@
 .navbar {
     width: 100%;
     display: flex;
-    justify-content: flex-start;
+    justify-content: center;
     justify-content: space-between;
     align-items: center;
     background-color:  transparent;
-    padding:35px;
+    padding:3rem;
     height: 10vh;
     
   }
@@ -55,18 +46,18 @@
     /* margin: 50px; */
     list-style: none;
     display: flex;
+
     
   }
   .navbar .navbar__mainnav li {
-    font-size: 10px;
-    margin: 15px;
-    font-size: 12px;
+    font-size: 1rem;;
+    margin: 0.5rem;
     
     
   }
   .navbar__mainnav li a{
    text-decoration: none;
-   font-size: 15px;
+   font-size: 1rem;
    color: white;
    font-weight: bold;
   }
@@ -74,10 +65,7 @@
     background-color: rgb(169, 166, 166);
     padding: 0.5rem;
     border-radius: 30%;
-    color: var(--primary-color);
-
-    
-
+    color: var(--primary-color);  
   }
   svg { 
     width: 100px;
@@ -101,6 +89,7 @@
     color:var(--primary-color);
     top:5px;
     font-size: 30px;
+    margin: 0;
   }
   .side_navbar{
       height: 100px;
@@ -156,60 +145,69 @@
   .logos {
       display:flex;
       justify-content: center;
-      align-items: flex-end;
+      align-items: center;
       width: 100%;
-      height: 50px;
-      padding-left:30px;
-
-    
+      height: 30vh;
+      /* padding-left:30px; */
   }
-  .boxes{
+
+  /* .boxes{
       width:70px;
       height: 10px;
-      background-color: transparent;
-      color: var(--primary-color);
-      font-weight: bold;
-      padding: 0px 20px;
-      margin: 0px 40px;
-      font-size:30px;
-  }
-  .box1{
+     
+  } */
+  /* .box1{
       margin: 15px;
-  }
+  } */
   .box1parent, .box2parent,.box3parent
   {
       display: flex;
       flex-direction: column;
       align-items: center;
       justify-content: center;
-      line-height: normal; 
       text-align: center;
+      background-color: transparent;
+      line-height: normal;
+      color: var(--primary-color);
+      font-weight: bold;
+      padding: 0px 20px;
+      margin: 0px 40px;
+      font-size:1.5rem;
+      width: 80px;
+      height: 20vh;
 
+
+  }
+  .boxes{
+   width: 80px;
+   height: 5vh;
 
   }
   .box1down, .box2down,.box3down{
      
      font-size: 10px;
-      padding: 20px 10px;
+      /* padding: 20px 10px;
       margin: 10px 50px;
-      padding-left: 30px;
+      padding-left: 30px; */
+      margin-top: 1rem;
+
      
   }
 
 
  
-  .box1down{
+  /* .box1down{
       padding-top: 5px;
-  }
+  } */
   .order_now {
     color:white;
     text-transform: uppercase; 
-    padding:10px 80px;
-    border-radius: 15px;
-    border: 1px solid white;
+    padding:10px 70px;
+    border-radius: 20%;
+    border: 2px solid white;
     font-weight: bold;
     background-color: transparent;
-    margin: 30px;
+    margin: 1rem;
     
    
   }
@@ -232,6 +230,8 @@
     transform: rotate(45deg);
     -webkit-transform: rotate(45deg);
   } */
+
+  /* page 2 */
 
   .page-2{
       width: 100%;
@@ -301,21 +301,20 @@ height: 120vh;
       .navbar .navbar__mainnav {
         flex-direction:  flex;
         
-        
-    
       }
       .navbar .navbar__mainnav li{
           flex:1;
       }
+
      section {
       visibility: hidden;
      }
-     
-     /* .logos{
-         flex-wrap: wrap;
-     } */
-   
-  }  
+
+     .logos{
+       display:flex;
+       flex-wrap: wrap;
+     }
+    }  
   
 
   /* @media (min-width: 600px)
