--- a/react/4/props-app/src/components/ex.9 spinner/spinner.css
+++ b/react/4/props-app/src/components/ex.9 spinner/spinner.css
@@ -1,5 +1,7 @@
+
 .loader {
-    color: #ffffff;
+  color: blue;
+    /* color: #ffffff; */
     font-size: 20px;
     margin: 100px auto;
     width: 1em;
